# bevy-sprite-frame-animation

./: Cargo.toml  flake.nix
.cargo/: config
src/: animation.rs  debug.rs  main.rs
src/animation/: controller.rs  indices.rs  traits.rs
