[package]
name = "bevy-sprite-frame-animation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["dyn", "debug"]
dyn = ["bevy/dynamic_linking"]
debug = ["bevy_editor_pls"]

[dependencies]
bevy = { version = "0.11", features = [] }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls", optional = true }

